--- a/app/src/main/res/layout/fragment_advertisement.xml
+++ b/app/src/main/res/layout/fragment_advertisement.xml
@@ -18,52 +18,62 @@
       android:id="@+id/srl_advertisement_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
-      
-      <LinearLayout
-          android:orientation="vertical"
+
+      <ScrollView
+          android:id="@+id/sv_ad"
+          android:overScrollMode="never"
+          android:scrollbars="none"
           android:layout_width="match_parent"
           android:layout_height="match_parent">
 
-        <FrameLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
-          <android.support.v4.view.ViewPager
-              android:id="@+id/vp_advertise"
-              android:layout_width="match_parent"
-              android:layout_height="150dp">
-
-          </android.support.v4.view.ViewPager>
-
-          <LinearLayout
-              android:orientation="horizontal"
-              android:background="#80000000"
-              android:layout_gravity="right"
-              android:layout_marginTop="7dp"
-              android:layout_marginRight="7dp"
-              android:layout_width="50dp"
-              android:layout_height="18dp">
-
-          </LinearLayout>
-          
-          <Button
-              android:layout_gravity="right|bottom"
-              android:layout_marginRight="9dp"
+          <FrameLayout
               android:layout_marginBottom="8dp"
-              android:layout_width="80dp"
-              android:layout_height="30dp" />
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content">
 
-        </FrameLayout>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vp_advertise"
+                android:layout_width="match_parent"
+                android:layout_height="150dp">
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never"
-            android:id="@+id/lv_advertise"
-            android:background="@color/colorWhite"
-            android:divider="@color/colorWhite"/>
+            </android.support.v4.view.ViewPager>
 
-      </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:background="#80000000"
+                android:layout_gravity="right"
+                android:layout_marginTop="7dp"
+                android:layout_marginRight="7dp"
+                android:layout_width="50dp"
+                android:layout_height="18dp">
+
+            </LinearLayout>
+
+            <Button
+                android:layout_gravity="right|bottom"
+                android:layout_marginRight="9dp"
+                android:layout_marginBottom="8dp"
+                android:layout_width="80dp"
+                android:layout_height="30dp" />
+
+          </FrameLayout>
+
+          <ListView
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:overScrollMode="never"
+              android:id="@+id/lv_advertise"
+              android:background="@color/colorWhite"
+              android:divider="@color/colorWhite"/>
+
+        </LinearLayout>
+
+      </ScrollView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
