--- a/app/src/main/res/layout/fragment_channel_detail.xml
+++ b/app/src/main/res/layout/fragment_channel_detail.xml
@@ -234,7 +234,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="19dp"
-        android:id="@+id/tv_channel_detail_reply_title"/>
+        android:id="@+id/tv_reply_title"/>
 
       <LinearLayout
         android:background="#d8d8d8"
@@ -243,7 +243,7 @@
 
       <!-- 댓글 리스트 -->
       <ListView
-          android:overScrollMode="never"
+        android:overScrollMode="never"
         android:id="@+id/lv_channel_detail_reply"
         android:choiceMode="none"
         android:clickable="false"
