--- a/app/src/main/res/layout/fragment_advertisement.xml
+++ b/app/src/main/res/layout/fragment_advertisement.xml
@@ -55,6 +55,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/btn_slide_ad"
                 android:layout_gravity="right|bottom"
                 android:layout_marginRight="9dp"
                 android:layout_marginBottom="8dp"
