--- a/app/src/main/res/layout/item_myworry_reply.xml
+++ b/app/src/main/res/layout/item_myworry_reply.xml
@@ -25,6 +25,7 @@
         app:fontWeight="medium"
         android:textSize="16dp"
         android:fontFamily="sans-serif"
+        android:layout_marginRight="5dp"
         android:textStyle="bold"
         android:textColor="#35343d"
         android:lineSpacingExtra="0sp"
