--- a/app/src/main/res/layout/dialog_myworry_reply_longclick.xml
+++ b/app/src/main/res/layout/dialog_myworry_reply_longclick.xml
@@ -13,11 +13,11 @@
     android:orientation="vertical">
 
     <kr.puzi.puzi.ui.customview.NotoButton
-      app:fontWeight="regular"
-      android:paddingTop="10dp"
-      android:paddingBottom="10dp"
+      app:fontWeight="demilight"
+      android:paddingTop="15dp"
+      android:paddingBottom="15dp"
       android:text="신고하기"
-      android:textSize="18dp"
+      android:textSize="16dp"
       android:textColor="#333333"
       android:background="#00000000"
       android:layout_width="match_parent"
@@ -33,11 +33,11 @@
       android:layout_height="1dp"/>
 
     <kr.puzi.puzi.ui.customview.NotoButton
-      app:fontWeight="regular"
-      android:paddingTop="10dp"
-      android:paddingBottom="10dp"
+      app:fontWeight="demilight"
+      android:paddingTop="15dp"
+      android:paddingBottom="15dp"
       android:text="삭제하기"
-      android:textSize="18dp"
+      android:textSize="16dp"
       android:textColor="#333333"
       android:background="#00000000"
       android:layout_width="match_parent"
