--- a/app/src/main/res/layout/fragment_advertisement.xml
+++ b/app/src/main/res/layout/fragment_advertisement.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:background="@color/colorWhite"
               android:orientation="vertical"
               android:id="@+id/ll_home"
@@ -20,57 +20,67 @@
       android:layout_height="match_parent">
 
       <ScrollView
-          android:id="@+id/sv_ad"
-          android:overScrollMode="never"
-          android:scrollbars="none"
+        android:id="@+id/sv_ad"
+        android:overScrollMode="never"
+        android:scrollbars="none"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+          android:visibility="gone"
+          android:id="@+id/sliding_container"
+          android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="match_parent">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
           <FrameLayout
-              android:layout_marginBottom="8dp"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+            android:layout_marginBottom="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <android.support.v4.view.ViewPager
-                android:id="@+id/vp_advertise"
-                android:layout_width="match_parent"
-                android:layout_height="150dp">
-
+              android:id="@+id/vp_advertise"
+              android:layout_width="match_parent"
+              android:layout_height="150dp">
             </android.support.v4.view.ViewPager>
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:background="#80000000"
-                android:layout_gravity="right"
-                android:layout_marginTop="7dp"
-                android:layout_marginRight="7dp"
-                android:layout_width="50dp"
-                android:layout_height="18dp">
+            <kr.puzi.puzi.ui.customview.NotoTextView
+              app:fontWeight="medium"
+              android:id="@+id/tx_sliding_count"
+              android:gravity="center"
+              android:orientation="horizontal"
+              android:background="@drawable/bg_sliding_count"
+              android:layout_gravity="right"
+              android:textSize="11sp"
+              android:textColor="#ffffff"
+              android:letterSpacing="0.05"
+              android:layout_marginTop="7dp"
+              android:layout_marginRight="7dp"
+              android:layout_width="50dp"
+              android:layout_height="18dp"/>
 
-            </LinearLayout>
-
-            <Button
-                android:id="@+id/btn_slide_ad"
-                android:layout_gravity="right|bottom"
-                android:layout_marginRight="9dp"
-                android:layout_marginBottom="8dp"
-                android:layout_width="80dp"
-                android:layout_height="30dp" />
+            <kr.puzi.puzi.ui.customview.NotoButton
+              app:fontWeight="medium"
+              android:text="적립하기"
+              android:textSize="14sp"
+              android:textColor="#ff2470"
+              android:id="@+id/btn_slide_ad"
+              android:background="@drawable/bg_sliding_save"
+              android:layout_gravity="right|bottom"
+              android:layout_marginRight="9dp"
+              android:layout_marginBottom="8dp"
+              android:layout_width="90dp"
+              android:layout_height="40dp"/>
 
           </FrameLayout>
 
           <ListView
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:overScrollMode="never"
-              android:id="@+id/lv_advertise"
-              android:background="@color/colorWhite"
-              android:divider="@color/colorWhite"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"
+            android:id="@+id/lv_advertise"
+            android:background="@color/colorWhite"
+            android:divider="@color/colorWhite"/>
 
         </LinearLayout>
 
