--- a/app/src/main/res/layout/view_slider.xml
+++ b/app/src/main/res/layout/view_slider.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+>
 
-    <ImageView
-        android:id="@+id/iv_slider_ad"
-        android:scaleType="centerCrop"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+  <com.ssomai.android.scalablelayout.ScalableLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_above="@+id/main_textview"
+    app:scale_base_width="240"
+    app:scale_base_height="100">
 
-</LinearLayout>
+    <ImageButton
+      android:background="#00000000"
+      android:id="@+id/iv_slider_ad"
+      android:scaleType="centerCrop"
+      app:scale_left="0"
+      app:scale_top="0"
+      app:scale_width="240"
+      app:scale_height="100"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"/>
+
+  </com.ssomai.android.scalablelayout.ScalableLayout>
+
+</FrameLayout>
