--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -477,6 +477,7 @@
       </LinearLayout>
 
       <LinearLayout
+        android:visibility="gone"
         android:orientation="vertical"
         android:id="@+id/ll_reply_list_bar"
         android:layout_width="match_parent"
