--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -441,7 +441,7 @@
 
       <LinearLayout
         android:visibility="gone"
-        android:background="@color/colorWhite"
+        android:background="#50ffffff"
         android:id="@+id/ll_reply_show_container"
         android:layout_width="match_parent"
         android:layout_height="55dp">
@@ -449,9 +449,10 @@
         <kr.puzi.puzi.ui.customview.NotoTextView
           app:fontWeight="demilight"
           android:text="댓글 "
-          android:textColor="#333333"
+          android:textColor="#ffffff"
           android:textSize="16dp"
           android:gravity="center_vertical|left"
+          android:id="@+id/tv_reply_show_title_reply"
           android:layout_marginLeft="29dp"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"/>
@@ -472,7 +473,7 @@
           android:layout_height="55dp"
           android:layout_marginRight="10dp"
           android:background="#00000000"
-          android:src="@drawable/comment_down_button"/>
+          android:src="@drawable/comment_up_button_white"/>
 
       </LinearLayout>
 
