--- a/app/src/main/res/layout/activity_recommend.xml
+++ b/app/src/main/res/layout/activity_recommend.xml
@@ -30,13 +30,8 @@
       android:id="@+id/tv_setting_title"/>
   </FrameLayout>
 
-  <LinearLayout
-    android:background="#dadada"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"/>
-
   <ScrollView
-      android:overScrollMode="never"
+    android:overScrollMode="never"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -45,13 +40,50 @@
       android:layout_height="wrap_content"
       android:orientation="vertical">
 
-      <ImageButton
-        android:id="@+id/ibtn_event_link"
-        android:src="@drawable/recommend_event_image"
-        android:background="#000000"
-        android:scaleType="fitXY"
+      <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+
+        <com.ssomai.android.scalablelayout.ScalableLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_above="@+id/main_textview"
+          app:scale_base_width="360"
+          app:scale_base_height="144">
+
+          <ImageButton
+            android:id="@+id/ibtn_event_link"
+            android:src="@drawable/recommend_event_image"
+            android:background="#000000"
+            android:scaleType="fitXY"
+            app:scale_left="0"
+            app:scale_top="0"
+            app:scale_width="360"
+            app:scale_height="144"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        </com.ssomai.android.scalablelayout.ScalableLayout>
+
+        <Button
+          android:layout_gravity="center|bottom"
+          android:layout_marginLeft="70dp"
+          android:layout_marginRight="70dp"
+          android:layout_marginBottom="6dp"
+          android:paddingLeft="10dp"
+          android:paddingRight="10dp"
+          android:paddingTop="5dp"
+          android:paddingBottom="5dp"
+          android:text="이모티콘 받기"
+          android:id="@+id/btn_event_link"
+          android:background="@drawable/bg_emoticon_save"
+          android:scaleType="fitXY"
+          android:textColor="#ffffff"
+          android:textSize="15dp"
+          android:layout_width="match_parent"
+          android:layout_height="40dp"/>
+
+      </FrameLayout>
 
       <LinearLayout
         android:orientation="horizontal"
@@ -180,6 +212,10 @@
 
     </LinearLayout>
   </ScrollView>
+  <LinearLayout
+    android:background="#dadada"
+    android:layout_width="match_parent"
+    android:layout_height="1dp"/>
 
 </LinearLayout>
 
