--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,13 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#efefef">
+                android:layout_height="match_parent">
+
+  <LinearLayout
+      android:gravity="center"
+      android:orientation="vertical"
+      android:id="@+id/ll_main_setting"
+      android:layout_width="match_parent"
+      android:layout_height="54dp">
+
+    <kr.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="regular"
+        android:gravity="center"
+        android:text="설정"
+        android:textColor="#333333"
+        android:textSize="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <LinearLayout
+        android:background="#dadada"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
+
+  </LinearLayout>
 
   <ScrollView
+      android:background="#efefef"
+      android:layout_below="@id/ll_main_setting"
       android:overScrollMode="never"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
