나의서비스 백그라운드 랜덤 수정

--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -10,6 +10,7 @@
 
     <!-- 일반답변화면 -->
     <LinearLayout
+        android:id="@+id/ll_myworry_background"
       android:orientation="vertical"
       android:background="@drawable/bg_main"
       android:layout_width="match_parent"
