--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -7,6 +7,7 @@
 
   <LinearLayout
     android:orientation="vertical"
+      android:id="@+id/ll_mytoday_background"
     android:background="@drawable/bg_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
