--- a/app/src/main/res/layout/item_thema_list_average.xml
+++ b/app/src/main/res/layout/item_thema_list_average.xml
@@ -76,7 +76,7 @@
                         app:fontWeight="regular"
                         android:textSize="16dp"
                         android:textColor="#9B9B9B"
-                        android:text="100"
+                        android:text="50"
                         android:gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -106,7 +106,7 @@
                     app:fontWeight="medium"
                     android:textSize="22dp"
                     android:textColor="#333333"
-                    android:text="타이틀 자리입니다"
+                    android:text="당신은 일반인입니다"
                     android:gravity="center_vertical"
                     android:ellipsize="marquee"
                     android:marqueeRepeatLimit="marquee_forever"
