--- a/app/src/main/res/layout/item_thema_list_lack.xml
+++ b/app/src/main/res/layout/item_thema_list_lack.xml
@@ -67,25 +67,11 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <ImageView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
                     <kr.puzi.puzi.ui.customview.NotoTextView
                         app:fontWeight="regular"
                         android:textSize="16dp"
                         android:textColor="#9B9B9B"
-                        android:text="100"
-                        android:gravity="center_vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <kr.puzi.puzi.ui.customview.NotoTextView
-                        app:fontWeight="regular"
-                        android:textSize="16dp"
-                        android:textColor="#9B9B9B"
-                        android:text="%"
+                        android:text="\?"
                         android:gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -98,19 +84,19 @@
                 android:orientation="vertical"
                 android:layout_marginLeft="12dp"
                 android:layout_marginRight="12dp"
+                android:layout_gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true">
 
                 <kr.puzi.puzi.ui.customview.NotoTextView
                     app:fontWeight="medium"
-                    android:textSize="22dp"
+                    android:textSize="16dp"
                     android:textColor="#333333"
-                    android:text="타이틀 자리입니다"
+                    android:text="응답 데이터가 부족하여\n개인 지표를 확인할 수 없습니다"
                     android:gravity="center_vertical"
                     android:ellipsize="marquee"
                     android:marqueeRepeatLimit="marquee_forever"
-                    android:singleLine="true"
                     android:focusableInTouchMode="true"
                     android:focusable="true"
                     android:layout_width="match_parent"
