--- a/app/src/main/res/layout/item_thema_list_max.xml
+++ b/app/src/main/res/layout/item_thema_list_max.xml
@@ -173,6 +173,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
+                    android:id="@+id/tv_thema_item_count"
                     android:text="2000"
                     android:textColor="#9B9B9B"
                     android:textSize="16dp"
