나의오늘은 랜덤 배경 수정, 나의고민은 애니메이션, 선택완료 버튼 수정

--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -413,6 +413,7 @@
       <kr.puzi.puzi.ui.customview.NotoButton
         app:fontWeight="medium"
         android:id="@+id/btn_answer_ok"
+        android:visibility="invisible"
         android:background="@drawable/button_puzi"
         android:gravity="center"
         android:text="선택완료"
